fix big space behind hero section on all devices

--- a/src/app/(with-footer)/(home)/_sections/HeroSection/HeroSection.module.css
+++ b/src/app/(with-footer)/(home)/_sections/HeroSection/HeroSection.module.css
@@ -96,11 +96,29 @@
 		padding-block: var(--space-block);
 		margin-inline: auto;
 	}
+
+	.buttonContainer {
+		margin: 2px 0;
+	}
+}
+
+@media screen and (min-width: 1025px) {
+	.actions {
+		gap: 8px;
+	}
+
+	.section {
+		padding-block: var(--space-block-sm);
+	}
+
+	.buttonContainer {
+		margin: 8px 0;
+	}
 }
 
 .availableCircle {
 	--size: 8px;
-	--color-background: #3ea914;
+	--color-background: #35bb2b;
 	position: relative;
 	inline-size: var(--size);
 	block-size: var(--size);
@@ -120,7 +138,7 @@
 @keyframes circle-pulse {
 	0% {
 		transform: scale(0.875);
-		box-shadow: 0 0 0 0 #24720c;
+		box-shadow: 0 0 0 0 #4de635;
 	}
 	50% {
 		transform: scale(1);
@@ -171,4 +189,18 @@
 	transition: border-block-color var(--theme-transition-duration);
 	pointer-events: none;
 	display: none;
+}
+
+@media screen and (min-width: 1025px) {
+	.actions {
+		gap: 8px;
+	}
+
+	.section {
+		padding-block: var(--space-block-sm);
+	}
+
+	.buttonContainer {
+		margin: 8px 0;
+	}
 }
